--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -70,6 +70,14 @@ body {
     margin-top: 35px;
    }
 
+   .link-home{
+    text-decoration: none;
+    font-size: 1rem;
+    color: #f7e9ce;
+    font-weight: bold;
+    transition: color 0.3s ease;
+  }
+
    @media screen and (max-width: 768px) {
         body {
             background-size: cover;
