--- a/src/pages/RecipeListPage.css
+++ b/src/pages/RecipeListPage.css
@@ -28,7 +28,7 @@
 /* Top-right corner links */
 .top-right-links {
   position: absolute;
-  top: 4rem;
+  top: 3rem;
   right: 1rem;
   display: flex;
   gap: 1rem;
@@ -105,4 +105,54 @@
   font-size: 1.5rem;
   color: #712e25;
   margin-top: 2rem;
+}
+
+.modal-content-confirm{
+  background-color: #f7e9ce;
+  color: #712e25;
+  padding: 2rem;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 450px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-height: 80%;
+}
+
+.confirm-button{
+  background-color: #a42716;
+  color: #f7e9ce;
+  padding: 0.5rem 1rem;
+  margin-right: 10px;
+  font-size: 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.cancel-button{
+  background-color: #712e25;
+  color: #f7e9ce;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+/* Scrollable container for recipe cards */
+.recipe-list-container {
+  max-height: 450px; /* Set a fixed height for the container */
+  overflow-y: auto; /* Enable vertical scrolling */
+  padding: 0.5rem;
+  margin-top: 45px;
+}
+
+/* Add some spacing between the cards */
+.recipe-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1rem;
+  justify-items: center;
 }
